--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         <activity android:name=".SignUpActivity"></activity>
         <activity android:name=".WritePostActivity"></activity>
         <activity android:name=".MainActivity"></activity>
+        <activity android:name=".MemberInitActivity"></activity>
         <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
