--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CAMERA"/>
-
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
     <application
@@ -14,12 +14,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Barter">
-        <activity android:name=".SignUpActivity"></activity>
-        <activity android:name=".WritePostActivity"></activity>
-        <activity android:name=".MainActivity"></activity>
-        <activity android:name=".MemberInitActivity"></activity>
-        <activity android:name=".CameraActivity"></activity>
-        <activity android:name=".LoginActivity">
+        <activity android:name=".activity.SignUpActivity"></activity>
+        <activity android:name=".activity.WritePostActivity"></activity>
+        <activity android:name=".activity.MainActivity"></activity>
+        <activity android:name=".activity.MemberInitActivity"></activity>
+        <activity android:name=".activity.CameraActivity"></activity>
+        <activity android:name=".activity.GalleryActivity"></activity>
+        <activity android:name=".activity.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
