--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,15 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:26.3.0')
     implementation platform('com.google.firebase:firebase-bom:27.1.0')
     implementation 'com.google.firebase:firebase-auth'
+    implementation ("com.github.bumptech.glide:glide:4.9.0") {
+        exclude group: "com.android.support"
+    }
+    annotationProcessor 'androidx.annotation:annotation:1.0.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
+    implementation ("com.github.bumptech.glide:glide:4.9.0@aar") {
+        transitive = true
+    }
+
     // Import the BoM for the Firebase platform
     // Import the Firebase BoM
 
