--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.barter"
-        minSdkVersion 16
+        minSdkVersion 21
         targetSdkVersion 30
         multiDexEnabled true
         versionCode 1
@@ -30,18 +30,53 @@ android {
 
 dependencies {
 
+    //authentication 연동
+    implementation 'com.google.firebase:firebase-auth:21.0.1'
+    //RealtimeDatabase 연동
+    implementation 'com.google.firebase:firebase-database:20.0.0'
+    //Cloud firestore 연동
+    implementation 'com.google.firebase:firebase-firestore:23.0.0'
+    //Cloud Storage 연동
+    implementation 'com.google.firebase:firebase-storage:20.0.0'
+    //Remote config 연동
+    implementation 'com.google.firebase:firebase-config:21.0.0'
+    //FCM 연동
+    implementation 'com.google.firebase:firebase-messaging:22.0.0'
+    //recyclerview
+    implementation 'androidx.recyclerview:recyclerview:1.2.0'
+    implementation 'org.jetbrains:annotations:15.0'
+
+    //firebase 연동
+    apply plugin: 'com.android.application'
+    apply plugin: 'com.google.gms.google-services'
+    implementation platform('com.google.firebase:firebase-bom:28.0.1')
+    implementation 'com.google.firebase:firebase-analytics'
+
+    //Glide 연동
+    implementation ("com.github.bumptech.glide:glide:4.9.0") {
+        exclude group: "com.android.support"
+    }
+    annotationProcessor 'androidx.annotation:annotation:1.0.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
+    implementation ("com.github.bumptech.glide:glide:4.9.0@aar") {
+        transitive = true
+    }
+
+    //Picasso 연동
+    implementation 'com.squareup.picasso:picasso:2.71828'
+    def multidex_version = "2.0.1"
+    implementation "androidx.multidex:multidex:$multidex_version"
+    implementation 'com.android.support:multidex:1.0.3'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation 'com.google.firebase:firebase-firestore:21.6.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    implementation platform('com.google.firebase:firebase-bom:26.7.0')
-    implementation 'com.google.firebase:firebase-analytics'
-    implementation platform('com.google.firebase:firebase-bom:26.3.0')
-    implementation platform('com.google.firebase:firebase-bom:27.1.0')
-    implementation 'com.google.firebase:firebase-auth'
+    implementation 'com.google.firebase:firebase-analytics:19.0.0'
+    implementation 'com.google.firebase:firebase-auth:21.0.1'
+
+
     // Import the BoM for the Firebase platform
     // Import the Firebase BoM
 
