--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ allprojects {
         // Check that you have the following line (if not, add it):
         google()  // Google's Maven repository
         jcenter()
+        maven { url "https://oss.sonatype.org/content/repositories/snapshots"}
     }
 }
 
